# weex_js_engine

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  build.jsc.sh  buildCopy.sh
Source/: CMakeLists.txt  Compatible.cpp  IPCMessageJS.h  TestCrashHandler.cpp  Trace.cpp  WeexJSConnection.cpp  WeexJSServer.cpp  WeexJSServerMain.cpp  WeexJSServerMainStub.cpp  weexjsc.cpp  weexjsserver_version_script.txt  weexproxy.cpp  weexproxy.h
Source/CrashHandler/: CMakeLists.txt  CrashHandler.cpp  CrashHandler.h
Source/IPC/: CMakeLists.txt  IPCCommunicator.cpp  IPCCommunicator.h  IPCListener.cpp  IPCListener.h  IPCLog.h  IPCResult.cpp  IPCResult.h  IPCSender.cpp  IPCSender.h  IPCType.h
Source/IPC/Buffering/: IPCBuffer.h
Source/JavaScriptCore/: CMakeLists.txt  Compatible.cpp  jsc.cpp
Source/JavaScriptCore/assembler/: MacroAssemblerARMv7.cpp  MacroAssemblerARMv7.h  MacroAssemblerX86.h
Source/JavaScriptCore/bytecode/: MethodOfGettingAValueProfile.cpp  ValueProfile.h
Source/JavaScriptCore/dfg/: DFGPlan.cpp
Source/JavaScriptCore/heap/: Heap.cpp  HeapTimer.cpp  MachineStackMarker.cpp
Source/JavaScriptCore/jit/: AssemblyHelpers.h  JITInlines.h
Source/JavaScriptCore/llint/: LLIntSlowPaths.cpp
Source/JavaScriptCore/runtime/: CommonSlowPaths.cpp  ConsoleObject.cpp  InitializeThreading.cpp  JSGlobalObjectFunctions.cpp  Options.cpp  Trace.h
Source/JavaScriptCore/shell/: CMakeLists.txt
Source/WTF/: CMakeLists.txt  config.h
Source/WTF/icu/: ICUCompatible.cpp
Source/WTF/wtf/: CMakeLists.txt  CompilationThread.cpp  FastMalloc.cpp  MainThread.cpp  ParkingLot.cpp  Platform.h  SharedTLSData.cpp  SharedTLSData.h  ThreadIdentifierDataPthreads.cpp  Trace.cpp  WTFThreadData.cpp  WTFThreadData.h
Source/WTF/wtf/linux/: MemoryPressureHandlerLinux.cpp
Source/WeexCore/WeexJSServer/: WeexJSCExternal.cpp  WeexJSCExternal.h  WeexJSServerApi.cpp  WeexJSServerApi.h  WeexJSServerMain.cpp
Source/WeexCore/WeexJSServer/bridge/platform/: core_side_in_simple.cpp  core_side_in_simple.h  platform_bridge_in_multi_process.cpp  platform_bridge_in_multi_process.h  platform_bridge_in_multi_so.cpp  platform_bridge_in_multi_so.h  platform_side_in_multi_so.cpp  platform_side_in_multi_so.h  platform_side_multi_process.cpp  platform_side_multi_process.h
Source/WeexCore/WeexJSServer/bridge/script/: core_side_in_multi_process.cpp  core_side_in_multi_process.h  core_side_in_multi_so.cpp  core_side_in_multi_so.h  core_side_in_simple.cpp  core_side_in_simple.h  script_bridge_in_multi_process.cpp  script_bridge_in_multi_process.h  script_bridge_in_multi_so.cpp  script_bridge_in_multi_so.h  script_bridge_in_simple.cpp  script_bridge_in_simple.h  script_side_in_queue.cpp  script_side_in_queue.h  script_side_in_simple.cpp  script_side_in_simple.h
Source/WeexCore/WeexJSServer/ipc/: ipc_server.cpp  ipc_server.h
Source/WeexCore/WeexJSServer/object/: Args.cpp  Args.h  SimpleObject.cpp  SimpleObject.h  WeexConsoleObject.cpp  WeexConsoleObject.h  WeexEnv.cpp  WeexEnv.h  WeexGlobalObject.cpp  WeexGlobalObject.h  WeexIPCClient.cpp  WeexIPCClient.h  WeexObjectHolder.cpp  WeexObjectHolder.h
Source/WeexCore/WeexJSServer/object/args/: ExeJsArgs.cpp  ExeJsArgs.h  InitFrameworkArgs.cpp  InitFrameworkArgs.h
Source/WeexCore/WeexJSServer/task/: TimerQueue.cpp  TimerQueue.h  TimerTask.cpp  TimerTask.h  WeexTask.cpp  WeexTask.h  WeexTaskQueue.cpp  WeexTaskQueue.h
Source/WeexCore/WeexJSServer/task/impl/: CTimeCallBackask.cpp  CTimeCallBackask.h  CallJsOnAppContextTask.cpp  CallJsOnAppContextTask.h  CreateAppContextTask.cpp  CreateAppContextTask.h  CreateInstanceTask.cpp  CreateInstanceTask.h  DestoryAppContextTask.cpp  DestoryAppContextTask.h  DestoryInstanceTask.cpp  DestoryInstanceTask.h  ExeJsOnAppWithResultTask.cpp  ExeJsOnAppWithResultTask.h  ExeJsOnInstanceTask.cpp  ExeJsOnInstanceTask.h  ExeJsServicesTask.cpp  ExeJsServicesTask.h  ExeJsTask.cpp  ExeJsTask.h  InitFrameworkTask.cpp  InitFrameworkTask.h  NativeTimerTask.cpp  NativeTimerTask.h  TakeHeapSnapShot.cpp  TakeHeapSnapShot.h  TimerTask.cpp  TimerTask.h  UpdateGlobalConfigTask.cpp  UpdateGlobalConfigTask.h
Source/WeexCore/WeexJSServer/utils/: Compatible.cpp  LogUtils.cpp  LogUtils.h  ThreadLocker.cpp  ThreadLocker.h  Utils.cpp  Utils.h  WeexRuntime.cpp  WeexRuntime.h
Source/WeexCore/WeexJSServer/wson/: wsonjsc.cpp  wsonjsc.h
Source/bmalloc/: CMakeLists.txt
Source/bmalloc/bmalloc/: DebugHeap.cpp
Source/icu/: CMakeLists.txt
Source/icu/source/config/: mh-linux
Source/include/: WeexApiHeader.h
Source/wson/: wsonjsc.cpp  wsonjsc.h
arm-linux-androideabi-gcc-7.2/arm-linux-androideabi/lib/: libasan.la  libasan.so.4.0.0  libatomic.la  libcilkrts.la  libcilkrts.spec  libgomp.la  libsanitizer.spec  libstdc++.a-gdb.py  libstdc++.la  libstdc++fs.la  libsupc++.la  libubsan.la  libubsan.so.0.0.0
arm-linux-androideabi-gcc-7.2/arm-linux-androideabi/lib/armv7-a/: libasan.la  libasan.so.4.0.0  libatomic.la  libcilkrts.la  libgomp.la  libstdc++.a-gdb.py  libstdc++.la  libstdc++fs.la  libsupc++.la  libubsan.la  libubsan.so.0.0.0
arm-linux-androideabi-gcc-7.2/arm-linux-androideabi/lib/thumb/: libasan.la  libasan.so.4.0.0  libatomic.la  libcilkrts.la  libgomp.la  libgomp.spec  libstdc++.a-gdb.py  libstdc++.la  libstdc++fs.la  libsupc++.la  libubsan.la  libubsan.so.0.0.0
arm-linux-androideabi-gcc-7.2/lib/: libcc1.la  libcc1.so.0.0.0
arm-linux-androideabi-gcc-7.2/share/info/: cpp.info  cppinternals.info  dir  gcc.info  gccinstall.info  gccint.info  libgomp.info
arm-linux-androideabi-gcc-7.2/share/man/man1/: arm-linux-androideabi-cpp.1  arm-linux-androideabi-g++.1  arm-linux-androideabi-gcov-dump.1  arm-linux-androideabi-gcov-tool.1  arm-linux-androideabi-gcov.1
arm-linux-androideabi-gcc-7.2/share/man/man7/: fsf-funding.7  gfdl.7  gpl.7
cmake/: Android.cmake  OptionsJSCOnly.cmake  WebKitFeatures.cmake  WebKitMacros.cmake  WeexFS.cmake
jni/: Android.mk  Application.mk
jni/v8core/: LogUtils.h  com_taobao_weex_bridge_WXBridge.cpp  com_taobao_weex_bridge_WXBridge.h  malloc.c  v8.h
jni/v8core/v8/: Makefile  Makefile.android  build.sh
(+68 files in other folders)
